Fixed scrollbar-hide

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @font-face {
-    font-family: "matrix";
-    src: url("assets/fonts/ocr-a/ocr-aregular.ttf");
-  }
+  font-family: "matrix";
+  src: url("assets/fonts/ocr-a/ocr-aregular.ttf");
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
